--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "ethers": "^5.7.2",
     "express": "^4.18.2",
     "mongoose": "^6.7.0",
     "nodemon": "^2.0.20"
